entrega para o dia 11/11

--- a/src/Blog.Api/Blog.Api.csproj
+++ b/src/Blog.Api/Blog.Api.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Blog.Application\Blog.Application.csproj" />
     <ProjectReference Include="..\Blog.Data\Blog.Data.csproj" />
   </ItemGroup>
 
