--- a/src/Blog.Web/appsettings.Development.json
+++ b/src/Blog.Web/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DemoBancoAutomatico.db"
+    "DefaultConnection": "Data Source=../DemoBancoAutomatico.db"
   }
 }
